--- a/client/src/index.html
+++ b/client/src/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="app sidebar-mini">
       <!-- Navbar-->
-      <header class="app-header"><a class="app-header__logo" href="index.html">Vali</a>
+      <header class="app-header"><a class="app-header__logo" href="index.html">Aquarion</a>
         <!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar"></a>
         <!-- Navbar Right Menu-->
         <ul class="app-nav">
@@ -21,7 +21,7 @@
             <button class="app-search__button"><i class="fa fa-search"></i></button>
           </li>
           <!--Notification Menu-->
-          <li class="dropdown"><a class="app-nav__item" href="#" data-toggle="dropdown"><i class="fa fa-bell-o fa-lg"></i></a>
+          <!-- <li class="dropdown"><a class="app-nav__item" href="#" data-toggle="dropdown"><i class="fa fa-bell-o fa-lg"></i></a>
             <ul class="app-notification dropdown-menu dropdown-menu-right">
               <li class="app-notification__title">You have 4 new notifications.</li>
               <div class="app-notification__content">
@@ -60,11 +60,11 @@
               </div>
               <li class="app-notification__footer"><a href="#">See all notifications.</a></li>
             </ul>
-          </li>
+          </li> -->
           <!-- User Menu-->
           <li class="dropdown"><a class="app-nav__item" href="#" data-toggle="dropdown"><i class="fa fa-user fa-lg"></i></a>
             <ul class="dropdown-menu settings-menu dropdown-menu-right">
-              <li><a class="dropdown-item" href="page-user.html"><i class="fa fa-cog fa-lg"></i> Settings</a></li>
+              <!--<li><a class="dropdown-item" href="page-user.html"><i class="fa fa-cog fa-lg"></i> Settings</a></li>-->
               <li><a class="dropdown-item" href="page-user.html"><i class="fa fa-user fa-lg"></i> Profile</a></li>
               <li><a class="dropdown-item" href="page-login.html"><i class="fa fa-sign-out fa-lg"></i> Logout</a></li>
             </ul>
@@ -74,14 +74,15 @@
       <!-- Sidebar menu-->
       <div class="app-sidebar__overlay" data-toggle="sidebar"></div>
       <aside class="app-sidebar">
-        <div class="app-sidebar__user"><img class="app-sidebar__user-avatar" src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/48.jpg" alt="User Image">
+        <div class="app-sidebar__user">
+          <img class="app-sidebar__user-avatar" src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/48.jpg" alt="User Image">
           <div>
-            <p class="app-sidebar__user-name">John Doe</p>
-            <p class="app-sidebar__user-designation">Frontend Developer</p>
+            <p class="app-sidebar__user-name">Not logged in</p>
+            <!-- <p class="app-sidebar__user-designation">Frontend Developer</p> -->
           </div>
         </div>
         <ul class="app-menu">
-          <li><a class="app-menu__item" href="index.html"><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">Dashboard</span></a></li>
+          <!-- <li><a class="app-menu__item" href="index.html"><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">Dashboard</span></a></li>
           <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-laptop"></i><span class="app-menu__label">UI Elements</span><i class="treeview-indicator fa fa-angle-right"></i></a>
             <ul class="treeview-menu">
               <li><a class="treeview-item" href="bootstrap-components.html"><i class="icon fa fa-circle-o"></i> Bootstrap Elements</a></li>
@@ -116,14 +117,11 @@
               <li><a class="treeview-item" href="page-mailbox.html"><i class="icon fa fa-circle-o"></i> Mailbox</a></li>
               <li><a class="treeview-item" href="page-error.html"><i class="icon fa fa-circle-o"></i> Error Page</a></li>
             </ul>
-          </li>
+          </li> -->
         </ul>
       </aside>
       <main class="app-content">
           <app-root></app-root>
-
       </main>
-
-
 </body>
 </html>
